@@ -7,15 +7,14 @@
 1.3:Listado de las RUTAS de directorio para el disco etiquetado %
 1.4:El número de serie del volumen es %
 1.5:No existen subdirectorios
-1.6: --- Press any key to continue ---
 
 # showUsage
-2.1:Visualiza gráficamente la estructura de directorios de un disco o ruta.
+2.1:Visualiza la estructura de directorios de un disco o ruta.
 2.2:\t
 2.3:TREE [unidad:][ruta] [/F] [/A]
 2.4:\t
-2.5:  /F  Visualiza los nombres de los archivos en cada directorio.
-2.6:  /A  Utiliza el ASCII en vez de caracteres extendidos.
+2.5:/F   Visualiza los nombres de los archivos en cada directorio.
+2.6:/A   Utiliza el ASCII en vez de caracteres extendidos.
 
 # showInvalidUsage
 3.1:La opción es no válida - %
