@@ -8,12 +8,12 @@
 1.5:Том не содержит подкаталогов.
 
 # showUsage
-2.1:Графическое представление структуры диска или каталога.
+2.1:Отображает структуру диска или каталога.
 2.2:\t
 2.3:TREE [диск:][путь] [/F] [/A]
 2.4:\t
-2.5:  /F  Отображать имена файлов в каждом каталоге.
-2.6:  /A  Использовать ASCII вместо Extended ASCII.
+2.5:/F   Отображать имена файлов в каждом каталоге.
+2.6:/A   Использовать ASCII вместо Extended ASCII.
 
 # showInvalidUsage
 3.1:Некорректный ключ - %
