@@ -1,2 +1,2 @@
-Version:     20241120
-Description: graphically displays the folder structure of a drive or path
+Version:     20250111
+Description: Displays the folder structure of a drive or path
